--- a/pom.xml
+++ b/pom.xml
@@ -99,8 +99,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>RELEASE</version>
-                <scope>test</scope>
+                <version>4.13.2</version> <!-- 替换为稳定版本 -->
             </dependency>
         </dependencies>
 
