--- a/yunying-ai/pom.xml
+++ b/yunying-ai/pom.xml
@@ -54,10 +54,10 @@
 <!--            <version>2.4.6</version>-->
 <!--        </dependency>-->
         <!--Milvus-->
-        <dependency>
-            <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-milvus-store-spring-boot-starter</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.ai</groupId>-->
+<!--            <artifactId>spring-ai-milvus-store-spring-boot-starter</artifactId>-->
+<!--        </dependency>-->
 
 
 
